--- a/follow-order-module/pom.xml
+++ b/follow-order-module/pom.xml
@@ -14,6 +14,7 @@
 		<module>follow-module-monitor</module>
 		<module>follow-module-member</module>
         <module>follow-module-iot</module>
+		<module>follow-module-mascontrol</module>
     </modules>
 	
 </project>
