--- a/follow-order-server/pom.xml
+++ b/follow-order-server/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>follow-module-monitor</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>net.maku</groupId>
+            <artifactId>follow-module-mascontrol</artifactId>
+            <version>${revision}</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>net.maku</groupId>-->
 <!--            <artifactId>follow-module-iot</artifactId>-->
