--- a/follow-order-subcontrol/pom.xml
+++ b/follow-order-subcontrol/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>follow-order-framework</artifactId>
 			<version>${revision}</version>
 		</dependency>
+		<dependency>
+			<groupId>net.maku</groupId>
+			<artifactId>follow-order-followcom</artifactId>
+			<version>${revision}</version>
+		</dependency>
 	</dependencies>
 
 </project>
