--- a/follow-order-framework/pom.xml
+++ b/follow-order-framework/pom.xml
@@ -115,6 +115,10 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.cld</groupId>
             <artifactId>cld-utils</artifactId>
             <version>0.0.2</version>
