滑点分析功能bug修改

--- a/follow-order-api/pom.xml
+++ b/follow-order-api/pom.xml
@@ -13,6 +13,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.maku</groupId>
+			<artifactId>follow-order-framework</artifactId>
+			<version>${revision}</version>
+		</dependency>
 	</dependencies>
 
 </project>
