--- a/follow-order-mascontrol/pom.xml
+++ b/follow-order-mascontrol/pom.xml
@@ -88,6 +88,12 @@
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
