--- a/follow-order-module/follow-module-quartz/pom.xml
+++ b/follow-order-module/follow-module-quartz/pom.xml
@@ -11,7 +11,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>net.maku</groupId>
-			<artifactId>follow-order-framework</artifactId>
+			<artifactId>follow-order-followcom</artifactId>
 			<version>${revision}</version>
 		</dependency>
 		<dependency>
