--- a/follow-order-server/src/main/resources/application-test.yml
+++ b/follow-order-server/src/main/resources/application-test.yml
@@ -39,3 +39,13 @@ spring:
     password: maku
     clientId: maku_boot_service_dev
     default-topic: topic_default
+
+cld:
+  kafka:
+    servers: 39.99.255.153:9092
+    partition: 1
+    replication: 1
+    maxIdle: 20
+    minIdle: 10
+    # block synchronous callback 三种发送模式
+    sendMode: callback
