style(配置): 配置补充

--- a/follow-order-server/src/main/resources/application-uat.yml
+++ b/follow-order-server/src/main/resources/application-uat.yml
@@ -20,7 +20,7 @@ spring:
         master:
           # MySQL8
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://127.0.0.1:3306/follow-order?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+          url: jdbc:mysql://127.0.0.1:3306/follow-order-cp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
           username: follow-order
           password: cxRrPfNkybyP33Zb
           # 达梦
