feat(外部接口): 增加从库，多数据源处理

--- a/follow-order-subcontrol/src/main/resources/application-dev.yml
+++ b/follow-order-subcontrol/src/main/resources/application-dev.yml
@@ -22,6 +22,12 @@ spring:
           url: jdbc:mysql://localhost:3306/follow-order-cp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
           username: root
           password: 123456
+
+        slave:
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          url: jdbc:mysql://localhost:3306/copier_alan?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+          username: root
+          password: 123456
   mqtt:
     host: tcp://localhost:1883
     username: maku
