--- a/follow-order-subcontrol/src/main/resources/application-dev.yml
+++ b/follow-order-subcontrol/src/main/resources/application-dev.yml
@@ -1,10 +1,16 @@
 spring:
   data:
     redis:
-      database: 1
-      host: localhost
-      port: 6379
-      #timeout: 6000ms  # 连接超时时长（毫秒）
+      primary: redis1 # 默认 Redis 数据源为 redis1
+      redis1:
+        database: 1
+        host: localhost
+        port: 6379
+
+      redis2:
+        database: 2
+        host: localhost
+        port: 6379
   datasource:
     dynamic:
       hikari: # Hikari 连接池全局配置
