下单性能优化

--- a/follow-order-followcom/pom.xml
+++ b/follow-order-followcom/pom.xml
@@ -64,6 +64,10 @@
             <artifactId>follow-order-api</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
 
     </dependencies>
 
