--- a/follow-order-subcontrol/src/main/resources/application-dev.yml
+++ b/follow-order-subcontrol/src/main/resources/application-dev.yml
@@ -11,6 +11,19 @@ spring:
         database: 2
         host: localhost
         port: 6379
+
+  kafka:
+    bootstrap-servers: 127.0.0.1:9092
+    consumer:
+      group-id: order-group  # 消费者组 ID
+      auto-offset-reset: earliest  # 消费起始位置
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      max-poll-records: 1000 # 每次批量拉取消息数量
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
   datasource:
     dynamic:
       hikari: # Hikari 连接池全局配置
@@ -40,13 +53,3 @@ spring:
     password: maku
     clientId: maku_boot_service_dev
     default-topic: topic_default
-
-cld:
-  kafka:
-    servers: 127.0.0.1:9092
-    partition: 1
-    replication: 1
-    maxIdle: 20
-    minIdle: 10
-    # block synchronous callback 三种发送模式
-    sendMode: callback
