feat(主控): 添加每周定时测速任务

--- a/follow-order-module/follow-module-quartz/pom.xml
+++ b/follow-order-module/follow-module-quartz/pom.xml
@@ -18,6 +18,11 @@
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.maku</groupId>
+			<artifactId>follow-order-system</artifactId>
+			<version>4.5.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
