--- a/follow-order-subcontrol/src/main/resources/application-dev.yml
+++ b/follow-order-subcontrol/src/main/resources/application-dev.yml
@@ -23,7 +23,8 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-
+    groupIdMap:
+      "127.0.0.1": "order-group-a"
   datasource:
     dynamic:
       hikari: # Hikari 连接池全局配置
