--- a/follow-order-subcontrol/src/main/resources/application.yml
+++ b/follow-order-subcontrol/src/main/resources/application.yml
@@ -20,11 +20,9 @@ knife4j:
 
 spring:
   cache:
-    type: caffeine # 指定缓存类型为 Caffeine
+    type: redis   # 指定缓存类型为 Caffeine
     cache-names: # 定义缓存的名称
       - followVarietyCache
-    caffeine:
-      spec: maximumSize=500,expireAfterWrite=10d # 配置缓存大小和过期时间
   # 环境 dev|test|prod
   profiles:
     active: @profile.name@
