--- a/follow-order-subcontrol/src/main/resources/application-uat.yml
+++ b/follow-order-subcontrol/src/main/resources/application-uat.yml
@@ -1,11 +1,43 @@
 spring:
   data:
     redis:
-      database: 1
-      host: 47.76.47.230
-      port: 6379
-      password: p56MbQk!@2
-      #timeout: 6000ms  # 连接超时时长（毫秒）
+      primary: redis1 # 默认 Redis 数据源为 redis1
+      redis1:
+        database: 1
+        host: 39.99.241.16
+        port: 6379
+        password: d@OgcOQdvQ09
+        #timeout: 6000ms  # 连接超时时长（毫秒）
+      redis2:
+        database: 2
+        host: 39.99.241.16
+        port: 6379
+        password: d@OgcOQdvQ09
+  #      redis2:
+  #        database: 0
+  #        host: 98.142.143.187
+  #        port: 6379
+  #        password: t7CzvhZ8u6QgT%D^44Xzh@Dv%ednUK
+
+  kafka:
+    bootstrap-servers: 39.99.241.16:9092
+    consumer:
+      auto-offset-reset: earliest  # 消费起始位置
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      max-poll-records: 1000 # 每次批量拉取消息数量
+      enable-auto-commit: false # 禁用自动提交，改为手动提交
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    listener:
+      type: batch # 设置监听器类型为批量
+    groupIdMap:
+      "39.99.241.16": "order-group-a"
+      "39.98.123.55": "order-group-b"
+      "15.181.161.240": "order-group-c"
+      "15.181.163.233": "order-group-d"
+
   datasource:
     dynamic:
       hikari: # Hikari 连接池全局配置
@@ -20,22 +52,19 @@ spring:
         master:
           # MySQL8
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://47.76.47.230:3306/follow-order-cp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
-          username: follow-order
-          password: cxRrPfNkybyP33Zb
-          # 达梦
-          #    driver-class-name: dm.jdbc.driver.DmDriver
-          #    url: jdbc:dm://192.168.3.19:5236/maku_boot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
-          #    username: maku_boot
-          #    password: 12345678
-          # PostgreSQL
-          #    driver-class-name: org.postgresql.Driver
-          #    url: jdbc:postgresql://192.168.3.19:5432/postgres
-          #    username: postgres
-          #    password: 123456
+          url: jdbc:mysql://39.99.241.16:3306/follow-order-cp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+          username: root
+          password: 5v07DqL!F7333
+
+        slave:
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          url: jdbc:mysql://39.99.241.16:3306/copier_alan?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+          username: root
+          password: 5v07DqL!F7333
   mqtt:
     host: tcp://localhost:1883
     username: maku
     password: maku
     clientId: maku_boot_service_dev
     default-topic: topic_default
+
