fix(子控): 下单及平仓性能优化

--- a/follow-order-subcontrol/src/main/resources/application.yml
+++ b/follow-order-subcontrol/src/main/resources/application.yml
@@ -23,6 +23,11 @@ spring:
     type: caffeine   # 指定缓存类型为 Caffeine
     cache-names: # 定义缓存的名称
       - followVarietyCache
+      - followPlatCache
+      - followFollowCache
+      - followSubscriptionCache
+      - followSubOrderCache
+      - followSymbolCache
     caffeine:
       spec: maximumSize=500,expireAfterWrite=10d # 配置缓存大小和过期时间
   # 环境 dev|test|prod
