--- a/follow-order-framework/pom.xml
+++ b/follow-order-framework/pom.xml
@@ -5,6 +5,18 @@
         <artifactId>follow-order</artifactId>
         <version>${revision}</version>
     </parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>follow-order-framework</artifactId>
     <packaging>jar</packaging>
