--- a/follow-order-server/src/main/resources/application-test.yml
+++ b/follow-order-server/src/main/resources/application-test.yml
@@ -4,22 +4,22 @@ spring:
       primary: redis1 # 默认 Redis 数据源为 redis1
       redis1:
         database: 1
-        host: 39.99.136.49
+        host: r-8vb1a249o1w1q605bppd.redis.zhangbei.rds.aliyuncs.com
         port: 6379
-        password: d@OgcOQdvQ09
+        password: diVMn9bMpACrXh79QyYY
         #timeout: 6000ms  # 连接超时时长（毫秒）
-
       redis2:
-        database: 0
+        database: 2
         host: 39.99.136.49
         port: 6379
         password: d@OgcOQdvQ09
+
   datasource:
     dynamic:
       hikari: # Hikari 连接池全局配置
         connection-timeout: 30000     # 等待连接池分配链接的最大时长（毫秒），超过这个时长还没有可用的连接则发生 SQLException，默认：30 秒
-        minimum-idle: 2               # 最小空闲连接数
-        maximum-pool-size: 10         # 最大连接数
+        minimum-idle: 10               # 最小空闲连接数
+        maximum-pool-size: 100         # 最大连接数
         idle-timeout: 600000          # 连接超时的最大时长（毫秒），超时则被释放（retired），默认：10 分钟
         max-lifetime: 1800000         # 连接的生命时长（毫秒），超时而且没被使用则被释放（retired），默认： 30 分钟
         connection-test-query: SELECT 1
