--- a/follow-order-subcontrol/src/main/resources/application-test.yml
+++ b/follow-order-subcontrol/src/main/resources/application-test.yml
@@ -4,9 +4,9 @@ spring:
       primary: redis1 # 默认 Redis 数据源为 redis1
       redis1:
         database: 1
-        host: 39.99.136.49
+        host: r-8vb1a249o1w1q605bppd.redis.zhangbei.rds.aliyuncs.com
         port: 6379
-        password: d@OgcOQdvQ09
+        password: diVMn9bMpACrXh79QyYY
         #timeout: 6000ms  # 连接超时时长（毫秒）
       redis2:
         database: 2
