--- a/follow-order-server/src/main/resources/application.yml
+++ b/follow-order-server/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
       spec: maximumSize=500,expireAfterWrite=10d # 配置缓存大小和过期时间
   # 环境 dev|test|prod
   profiles:
-    active: test
+    active: @profile.name@
   application:
     name: follow-order
   jackson:
