--- a/follow-order-subcontrol/src/main/resources/application-test.yml
+++ b/follow-order-subcontrol/src/main/resources/application-test.yml
@@ -13,7 +13,11 @@ spring:
         host: 98.142.143.187
         port: 6379
         password: t7CzvhZ8u6QgT%D^44Xzh@Dv%ednUK
-
+  rabbitmq:
+    host: 39.101.132.253
+    port: 5672
+    username: user2
+    password: user2123
   kafka:
     bootstrap-servers: 127.0.0.1:9092
     consumer:
