--- a/follow-order-subcontrol/src/main/resources/application.yml
+++ b/follow-order-subcontrol/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
       - followSubscriptionCache
       - followSubOrderCache
       - followSymbolCache
+      - followSubTraderCache
     caffeine:
       spec: maximumSize=500,expireAfterWrite=10d # 配置缓存大小和过期时间
   # 环境 dev|test|prod
