fix(子控):去处事务避免资源不够

--- a/follow-order-server/src/main/resources/application-dev.yml
+++ b/follow-order-server/src/main/resources/application-dev.yml
@@ -4,11 +4,11 @@ spring:
       primary: redis1 # 默认 Redis 数据源为 redis1
       redis1:
         database: 1
-        host: 192.168.77.154
+        host: 127.0.0.1
         port: 6379
       redis2:
         database: 2
-        host: 192.168.77.154
+        host: 127.0.0.1
         port: 6379
   datasource:
     dynamic:
@@ -27,13 +27,13 @@ spring:
           #          url: jdbc:mysql://localhost:3306/follow-order?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
           #          username: root
           #          password: 123456
-          url: jdbc:mysql://192.168.77.154:3306/follow-order-cp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+          url: jdbc:mysql://127.0.0.1:3306/maku?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
           username: root
           password: 123456
 
         slave:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://192.168.77.154:3306/copier_alan?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+          url: jdbc:mysql://127.0.0.1:3306/copier_alan?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
           username: root
           password: 123456
   mqtt:
