--- a/follow-order-server/src/main/resources/application-uat.yml
+++ b/follow-order-server/src/main/resources/application-uat.yml
@@ -8,11 +8,12 @@ spring:
         port: 6379
         password: diVMn9bMpACrXh79QyYY
         #timeout: 6000ms  # 连接超时时长（毫秒）
+
       redis2:
-        database: 2
-        host: 39.99.241.16
+        database: 4
+        host: r-8vb1a249o1w1q605bppd.redis.zhangbei.rds.aliyuncs.com
         port: 6379
-        password: d@OgcOQdvQ09
+        password: diVMn9bMpACrXh79QyYY
   datasource:
     dynamic:
       hikari: # Hikari 连接池全局配置
